--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,19 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Layout from '../layouts/Layout.astro';
+import Hero from '../components/Hero.astro';
+import ProgramsSection from '../components/ProgramsSection.astro';
+import NewsSection from '../components/NewsSection.astro';
+import '../styles/global.css';
 ---
 
-<Layout>
-	<Welcome />
+<Layout title="3rd Butterworth Company - Boys' Brigade Malaysia">
+  <Fragment>
+
+	</Fragment>
+  <main>
+    <Hero />
+    <ProgramsSection />
+    <NewsSection />
+  </main>
 </Layout>
