--- a/src/components/Person.astro
+++ b/src/components/Person.astro
@@ -7,6 +7,7 @@ type Props = {
   photoAlt?: string;
   photoPosition?: string;
   photoScale?: string;
+  photoRotate?: string;
 };
 
 const {
@@ -16,7 +17,8 @@ const {
   photoSrc,
   photoAlt = `${name}'s portrait`,
   photoPosition = 'object-center',
-  photoScale = ''
+  photoScale = '',
+  photoRotate = '',
 } = Astro.props as Props;
 ---
 
@@ -25,7 +27,7 @@ const {
     <img
       src={photoSrc}
       alt={photoAlt}
-      class={`h-full w-full object-cover ${photoPosition} ${photoScale}`}
+      class={`h-full w-full object-cover ${photoPosition} ${photoScale} ${photoRotate}`}
       loading="lazy"
       decoding="async"
     />
