--- a/src/pages/about/leadership.astro
+++ b/src/pages/about/leadership.astro
@@ -11,7 +11,7 @@ import Person from '../../components/Person.astro';
         Meet the dedicated individuals who lead and inspire our company, fostering growth, discipline, and community spirit among our members.
       </p>
     </div>
-    <div class="grid gap-8 justify-items-center sm:grid-cols-2 lg:grid-cols-3">
+    <div class="grid gap-8 justify-items-center sm:grid-cols-2 lg:grid-cols-3 pb-8 sm:pb-4">
       <div class="flex w-full justify-center">
         <Person
           name="Koh Hui Yee"
@@ -86,7 +86,8 @@ import Person from '../../components/Person.astro';
           photoSrc="/headshots/oc/04_DT.jpg"
           portfolio="Secretary"
           photoScale='scale-105'
-          photoPosition="object-[5%_12%]"
+          photoPosition="object-[0%_12%]"
+          photoRotate='rotate-4'
         />
       </div>
       <div class="flex w-full justify-center">
@@ -104,8 +105,8 @@ import Person from '../../components/Person.astro';
           rank="warrant officer"
           photoSrc="/headshots/oc/04_MQ.jpg"
           portfolio="Sections & Awards"
-          photoScale='scale-105'
-          photoPosition="object-[0%_15%]"
+          photoScale='scale-103'
+          photoPosition="object-[0%_12%]"
         />
       </div>
       <div class="flex w-full justify-center">
@@ -123,7 +124,195 @@ import Person from '../../components/Person.astro';
           rank="warrant officer"
           photoSrc="/headshots/oc/04_CW.jpg"
           portfolio="Band | Drummer's Section"
+          photoScale='scale-105'
           photoPosition="object-top"
+        />
+      </div>
+      <div class="flex w-full justify-center">
+        <Person
+          name="Ng Zhi Hui"
+          rank="warrant officer"
+          photoSrc="/headshots/oc/04_ZH.jpg"
+          portfolio="Special Events"
+          photoScale='scale-110'
+          photoPosition="object-[0%_10%]"
+        />
+      </div>
+      <div class="flex w-full justify-center">
+        <Person
+          name="Kuan Chin Hou"
+          rank="warrant officer"
+          photoSrc="/headshots/oc/04_CH.jpg"
+          portfolio="Human Resources"
+          photoScale='scale-114'
+          photoPosition="object-[110%_-1%]"
+          photoRotate='-rotate-1'
+        />
+      </div>
+      <div class="flex w-full justify-center">
+        <Person
+          name="Ong Qian Ying"
+          rank="warrant officer"
+          photoSrc="/headshots/oc/04_QY.jpg"
+          portfolio="Band | Piper's Section"
+          photoScale='scale-100'
+          photoPosition="object-[0%_10%]"
+        />
+      </div>
+    </div>
+    <div class="mb-12 text-center bg-slate-800 p-4 rounded-2xl shadow-lg">
+      <h1 class="text-3xl sm:text-4xl font-bold text-white mb-4">Our Helpers</h1>
+      <p class="text-lg text-slate-200 max-w-2xl mx-auto">
+        Meet the young supporters who provide lend their expertise in various fields.
+    </div>
+    <div class="grid gap-8 justify-items-center sm:grid-cols-2 lg:grid-cols-3">
+      <div class="flex w-full justify-center">
+        <Person
+          name="mahesweijzian"
+          rank="instructor"
+          photoSrc="/headshots/oc/10_WJ.jpg"
+          portfolio="band"
+          photoPosition="object-top"
+          photoScale="scale-112"
+          photoRotate='-rotate-1'
+        />
+      </div>
+      <div class="flex w-full justify-center">
+        <Person
+          name="gan ern xin"
+          rank="instructor"
+          photoSrc="/headshots/oc/10_EX.jpg"
+          portfolio="Awards"
+          photoPosition="object-top"
+          photoScale="scale-105"
+          photoRotate='-rotate-1'
+        />
+      </div>
+      <div class="flex w-full justify-center">
+        <Person
+          name="Ch'ng Chean Pei"
+          rank="Instructor"
+          photoSrc="/headshots/oc/10_CP.jpg"
+          portfolio="Discipline"
+          photoPosition="object-top"
+          photoScale="scale-105"
+        />
+      </div>
+      <div class="flex w-full justify-center">
+        <Person
+          name="SORVINE LIM"
+          rank="Lieutenant"
+          photoSrc="/headshots/oc/03_SL.jpg"
+          portfolio="Praise & Worship"
+          photoPosition="object-top"
+        />
+      </div>
+      <div class="flex w-full justify-center">
+        <Person
+          name="JOCELYN TAI"
+          rank="Lieutenant"
+          photoSrc="/headshots/oc/03_JTai.jpg"
+          portfolio="Training"
+          photoPosition="object-top"
+        />
+      </div>
+      <div class="flex w-full justify-center">
+        <Person
+          name="JOSEPH THAW"
+          rank="Lieutenant"
+          photoSrc="/headshots/oc/03_JThaw.jpg"
+          portfolio="Parade & Discipline"
+          photoScale='scale-110'
+          photoPosition="object-top"
+        />
+      </div>
+      <div class="flex w-full justify-center">
+        <Person
+          name="jace lim"
+          rank="warrant officer"
+          photoSrc="/headshots/oc/04_JL.jpg"
+          portfolio="Training"
+          photoPosition="object-top"
+        />
+      </div>
+      <div class="flex w-full justify-center">
+        <Person
+          name="Daniel Tan"
+          rank="warrant officer"
+          photoSrc="/headshots/oc/04_DT.jpg"
+          portfolio="Secretary"
+          photoScale='scale-105'
+          photoPosition="object-[0%_12%]"
+          photoRotate='rotate-4'
+        />
+      </div>
+      <div class="flex w-full justify-center">
+        <Person
+          name="Lim Yong Fu"
+          rank="warrant officer"
+          photoSrc="/headshots/oc/04_YF.jpg"
+          portfolio="discipline"
+          photoPosition="object-[0%_15%]"
+        />
+      </div>
+      <div class="flex w-full justify-center">
+        <Person
+          name="Lim Mei Qing"
+          rank="warrant officer"
+          photoSrc="/headshots/oc/04_MQ.jpg"
+          portfolio="Sections & Awards"
+          photoScale='scale-103'
+          photoPosition="object-[0%_12%]"
+        />
+      </div>
+      <div class="flex w-full justify-center">
+        <Person
+          name="Lim Chuan Zhe"
+          rank="warrant officer"
+          photoSrc="/headshots/oc/04_CZ.jpg"
+          portfolio="Band, Tech & Media"
+          photoPosition="object-[0%_15%]"
+        />
+      </div>
+      <div class="flex w-full justify-center">
+        <Person
+          name="Chayu Chun Wei"
+          rank="warrant officer"
+          photoSrc="/headshots/oc/04_CW.jpg"
+          portfolio="Band | Drummer's Section"
+          photoScale='scale-105'
+          photoPosition="object-top"
+        />
+      </div>
+      <div class="flex w-full justify-center">
+        <Person
+          name="Ng Zhi Hui"
+          rank="warrant officer"
+          photoSrc="/headshots/oc/04_ZH.jpg"
+          portfolio="Special Events"
+          photoScale='scale-110'
+          photoPosition="object-[0%_10%]"
+        />
+      </div>
+      <div class="flex w-full justify-center">
+        <Person
+          name="Kuan Chin Hou"
+          rank="warrant officer"
+          photoSrc="/headshots/oc/04_CH.jpg"
+          portfolio="Human Resources"
+          photoScale='scale-114'
+          photoPosition="object-[110%_-1%]"
+          photoRotate='-rotate-1'
+        />
+      </div>
+      <div class="flex w-full justify-center">
+        <Person
+          name="Ong Qian Ying"
+          rank="warrant officer"
+          photoSrc="/headshots/oc/04_QY.jpg"
+          portfolio="Band | Piper's Section"
+          photoScale='scale-100'
+          photoPosition="object-[0%_10%]"
         />
       </div>
     </div>
