Change file naming conventions

--- a/src/pages/about/leadership.astro
+++ b/src/pages/about/leadership.astro
@@ -5,11 +5,11 @@ import type { PeopleCollection } from '../../data/types';
 
 // Import data from JSON files
 import leadershipData from '../../data/leadership/officer-team.json';
-import helpersData from '../../data/leadership/helper-team.json';
+import helperData from '../../data/leadership/helper-team.json';
 import ncoData from '../../data/leadership/nco-team.json';
 
 const leadershipTeam = (leadershipData as PeopleCollection).people;
-const helperTeam = (helpersData as PeopleCollection).people;
+const helperTeam = (helperData as PeopleCollection).people;
 const ncoTeam = (ncoData as PeopleCollection).people;
 ---
 
