--- a/src/pages/about/achievements.astro
+++ b/src/pages/about/achievements.astro
@@ -28,12 +28,12 @@ const honorableMentions = (honorableMentionsData as PeopleCollection).people;
     </section>
 
     <!-- Founder's Award Section -->
-    <section class="py-16 px-6 sm:px-8 lg:px-12">
+    <section class="py-16 px-6 sm:px-8 lg:px-12 ">
       <div class="mx-auto max-w-7xl">
         <div class="text-center mb-16">
           <div class="flex justify-center mb-8">
             <img
-              src="/awards/founders-award.svg"
+              src="/awards/1 Founder_s.png"
               alt="Founder's Award"
               class="w-32 h-32 sm:w-40 sm:h-40"
             />
@@ -53,7 +53,7 @@ const honorableMentions = (honorableMentionsData as PeopleCollection).people;
         <div class="text-center mb-16">
           <div class="flex justify-center mb-8">
             <img
-              src="/awards/presidents-award.svg"
+              src="/awards/2 President_s.png"
               alt="President's Award"
               class="w-32 h-32 sm:w-40 sm:h-40"
             />
@@ -71,7 +71,7 @@ const honorableMentions = (honorableMentionsData as PeopleCollection).people;
     </section>
 
     <!-- Honorable Mentions Section -->
-    <section class="py-16 px-6 sm:px-8 lg:px-12 bg-gray-50">
+    <section class="py-16 px-6 sm:px-8 lg:px-12 ">
       <div class="mx-auto max-w-7xl">
         <div class="text-center mb-16">
           <h2 class="text-4xl sm:text-5xl font-bold text-gray-900 mb-4 tracking-tight">
