--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,14 +3,17 @@ import '../styles/global.css';
 
 // Same content for all slides, only images change
 const slides = [
-  { image: '/IMG_0427.JPG' },
-  { image: '/IMG_0392.JPG' },
-  { image: '/IMG_0427.JPG' }
+  { image: '/general/Drill.JPG' },
+  { image: '/general/FireDepartment.JPG' },
+  { image: '/general/OrderOfEnrolment.JPG' },
+  { image: '/general/NDP.JPG' },
+  { image: '/general/Band3.JPG' },
+  { image: '/general/Band1.JPG' }
 ];
 
 const content = {
   title: 'Steadfast in Faith,<br class="hidden sm:block"/> Discipline, and Service',
-  description: 'Nurturing young men through faith-based activities, disciplined training, and community service.',
+  description: 'Nurturing young leaders through faith-based activities, disciplined training, and community service.',
   primaryCTA: { text: 'Explore Activities', href: '/activities' },
   secondaryCTA: { text: 'Learn More', href: '/about/company' }
 };
