--- a/src/pages/news/index.astro
+++ b/src/pages/news/index.astro
@@ -1,7 +1,7 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import '../styles/global.css';
-import highlightsData from '../data/highlights.json';
+import Layout from '../../layouts/Layout.astro';
+import '../../styles/global.css';
+import highlightsData from '../../data/highlights.json';
 
 // Sort by date (most recent first) and get top 5
 const latestHighlights = highlightsData
